Changed implementation so that crawl actors now block and are constructed by siteactor. Also optimized performance and squished bugs

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -45,15 +45,11 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+akka.default-dispatcher.fork-join-executor.pool-size-max =64
+
 play {
 	akka {
 	    actor {
-	        deployment {
-	            /crawlers {
-	                router = smallest-mailbox
-	                nr-of-instances = 100
-	            }
-	        }
     		statistics-dispatcher = {
     		    fork-join-executor {
 	    		    parallelism-factor = 1.0
@@ -65,6 +61,13 @@ play {
 	    		    parallelism-factor = 1.0
 		    	    parallelism-max = 1
 		    	}
+		    }
+    		crawler-dispatcher = {
+    		    fork-join-executor {
+	    		    parallelism-factor = 1.0
+		    	    parallelism-max = 20
+		    	}
+		    	throughput = 1
 		    }
 		}
 	}
