More sensible dispatcher for siteactors

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -55,6 +55,7 @@ play {
 	    		    parallelism-factor = 1.0
 		    	    parallelism-max = 1
 		    	}
+					throughput = 10
 		    }
     		manager-dispatcher = {
     		    fork-join-executor {
@@ -64,8 +65,8 @@ play {
 		    }
     		crawler-dispatcher = {
     		    fork-join-executor {
-	    		    parallelism-factor = 1.0
-		    	    parallelism-max = 20
+	    		    parallelism-factor = 10.0
+		    	    parallelism-max = 100
 		    	}
 		    	throughput = 1
 		    }
