--- a/conf/application.conf
+++ b/conf/application.conf
@@ -45,6 +45,8 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+ws.useragent=Crawler
+
 akka.default-dispatcher.fork-join-executor.pool-size-max =64
 
 play {
