--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,7 +43,7 @@ logger.root=ERROR
 logger.play=INFO
 
 # Logger provided to your application:
-logger.application=DEBUG
+logger.application=INFO
 
 ws.useragent=Crawler
 
@@ -66,7 +66,7 @@ play {
 		    }
     		crawler-dispatcher = {
     		    fork-join-executor {
-	    		    parallelism-factor = 30.0
+	    		    parallelism-factor = 20.0
 		    	    parallelism-max = 100
 		    	}
 		    	throughput = 1
