--- a/conf/application.conf
+++ b/conf/application.conf
@@ -64,12 +64,19 @@ play {
 		    	    parallelism-max = 1
 		    	}
 		    }
-    		crawler-dispatcher = {
+    		site-dispatcher = {
     		    fork-join-executor {
-	    		    parallelism-factor = 30.0
+	    		    parallelism-factor = 10.0
 		    	    parallelism-max = 100
 		    	}
 		    	throughput = 1
+		    }
+    		crawler-dispatcher = {
+    		    fork-join-executor {
+	    		    parallelism-factor = 10.0
+		    	    parallelism-max = 100
+		    	}
+		    	throughput = 10
 		    }
 		}
 	}
