Tweaking config parameters to get better performance

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -45,39 +45,46 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-ws.useragent=Crawler
+ws.useragent=Slurp
 
 akka.default-dispatcher.fork-join-executor.pool-size-max =64
 
 play {
-	akka {
-	    actor {
-    		statistics-dispatcher = {
-    		    fork-join-executor {
-	    		    parallelism-factor = 1.0
-		    	    parallelism-max = 1
-		    	}
-		    }
-    		manager-dispatcher = {
-    		    fork-join-executor {
-	    		    parallelism-factor = 1.0
-		    	    parallelism-max = 1
-		    	}
-		    }
-    		site-dispatcher = {
-    		    fork-join-executor {
-	    		    parallelism-factor = 10.0
-		    	    parallelism-max = 100
-		    	}
-		    	throughput = 1
-		    }
-    		crawler-dispatcher = {
-    		    fork-join-executor {
-	    		    parallelism-factor = 10.0
-		    	    parallelism-max = 100
-		    	}
-		    	throughput = 10
-		    }
-		}
-	}
+        akka {
+            actor {
+                statistics-dispatcher = {
+                    fork-join-executor {
+                            parallelism-factor = 1.0
+                            parallelism-max = 1
+                        }
+                    }
+                manager-dispatcher = {
+                    fork-join-executor {
+                            parallelism-factor = 1.0
+                            parallelism-max = 1
+                        }
+                    }
+                site-dispatcher = {
+                    fork-join-executor {
+                            parallelism-factor = 2.0
+                            parallelism-max = 100
+                        }
+                        throughput = 2
+                    }
+                crawler-dispatcher = {
+                    fork-join-executor {
+                            parallelism-factor = 1.0
+                            parallelism-max = 64
+                        }
+                        throughput = 100
+                    }
+                net-dispatcher = {
+                    fork-join-executor {
+                            parallelism-factor = 10.0
+                            parallelism-max = 100
+                        }
+                        throughput = 1
+                }
+            }
+        }
 }
