Define number of parallel site crawls in config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,6 +49,8 @@ ws.useragent=Slurp
 
 akka.default-dispatcher.fork-join-executor.pool-size-max =64
 
+slurp.parallel.sites=120
+
 play {
         akka {
             actor {
