Better support for redirects

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,6 +46,7 @@ logger.play=INFO
 logger.application=DEBUG
 
 ws.useragent=Slurp
+ws.followRedirects=false
 
 akka.default-dispatcher.fork-join-executor.pool-size-max=64
 
