Optimizations, and moved Redis updates to separate dispatcher

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,6 +88,13 @@ play {
                         }
                         throughput = 1
                 }
+                redis-dispatcher = {
+                    fork-join-executor {
+                            parallelism-factor = 10.0
+                            parallelism-max = 100
+                        }
+                        throughput = 10
+                }
             }
         }
 }
