Timeout of 5 seconds for crawling

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,6 +47,7 @@ logger.application=DEBUG
 
 ws.useragent=Slurp
 ws.followRedirects=false
+ws.timeout=5000
 
 akka.default-dispatcher.fork-join-executor.pool-size-max=64
 
