Time to live for site actors to force cycling of sites

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,6 +52,7 @@ ws.timeout=5000
 akka.default-dispatcher.fork-join-executor.pool-size-max=64
 
 slurp.parallel.sites=120
+slurp.site.ttl=300
 
 play {
         akka {
