Changed redis-dispatcher to io-dispatcher. Added logging form manager+observed restarts

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -90,7 +90,7 @@ play {
                         }
                         throughput = 1
                 }
-                redis-dispatcher = {
+                io-dispatcher = {
                     fork-join-executor {
                             parallelism-factor = 10.0
                             parallelism-max = 100
