--- a/conf/application.conf
+++ b/conf/application.conf
@@ -53,6 +53,7 @@ akka.default-dispatcher.fork-join-executor.pool-size-max=64
 
 slurp.parallel.sites=120
 slurp.site.ttl=300
+slurp.observed.flush-interval = 60
 
 play {
         akka {
